Added embedded youtube videos. Finished content of arpa-net.html

--- a/public_html/arpa-net.html
+++ b/public_html/arpa-net.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Pre-Internet</title>
-    <meta name="description" content="Pre-Internet">
+    <title>ARPANET</title>
+    <meta name="description" content="ARPANET">
     <!-- COMMENT IN HTML -->
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -35,7 +35,7 @@
                     BBN built the IMPs.
                     <p>By 1969 they had the IMPs working and the IMP software "mostly" working. But they had reached the deadline and had to test the system. They did a basic test of sending one packet between 2 computers on the ARPANET and it worked! ARPANET launched the world's first successful packet-switched wide area computer network.
                     By the end of 1969 they had all 4 computers sending packets across the network.</p>
-                    <p>But there was no practical use for the ARPANET until in December, 1970, Dr. Steve Crocker completed the Network Control Protocol (NCP), which was the original host-to-host protocol for the ARPANET. With NPC they could send files and data across the network.
+                    <p>They could send packets across the ARPANET, but there was no practical use for the ARPANET until in December, 1970, Dr. Steve Crocker completed the Network Control Protocol (NCP). The NCP was the original host-to-host protocol for the ARPANET. With NPC they could now send useful information such as files and data across the network.
                     By 1971 the ARPAnet had 18 mainframe computers across the country.</p>
                 </div>
             </section>
@@ -47,51 +47,31 @@
                 </div>
                 <div class="sectionText">
                     <p>Even with 18 sites on the ARPANET, there weren't many users on the system. There was no other use for ARPANET other than sending and receiving data files to analyze.</p>
-                    <p>This changed in 1971 when Raymond Tomlinson developed the first "killer" app, email. He came up with the idea to use the @ sign to separate the persons name and the host computer. Email was something that everyone could use, and it was a great way to quickly get information back and forth. The Internet Hall of Fame says that, "Tomlinson's email program brought about a complete revolution, fundamentally changing the way people communicate".</p>
-                    <p>In October, 1972 ARPA sponsored the first International Conference on Computers and Communication in Washingtion, DC. The purpose of this conference was to showcase the capabilities of the ARPANET. A Terminal Interface Processor was installed at the hotel, connected with a special telephone connection from AT&T. Connected to the Terminal Interface Processor were dozens of terminals spread around the conference hall.</p>
-                    <p>The demontration allowed the paticipants to interact with romote computer systems which included an air traffic control system and playing computer chess.
-                       The ICCC was a huge success. Before the end of 1972 there were 37 computers on the network.</p>
+                    <p>This changed in 1971 when Raymond Tomlinson developed the first "killer" app, email. He came up with the idea to send message files to people on other host computers using the @ sign to separate the persons name and the host computer name. Email was something that everyone could use, and it was a great way to quickly get information back and forth. The Internet Hall of Fame says that, "Tomlinson's email program brought about a complete revolution, fundamentally changing the way people communicate".</p>
                 </div>
             </section>
             <section id="section3">
-                <h2>Critical building blocks of networking</h2>
+                <h2>The ICCC Showcases ARPANET</h2>
                 <div class="hoverwrap">
-                    <img src="images/network_cc.JPG" alt="This is a picture of a mainframe computer"/>
-                    <div class="hovermsg"><a href="https://www.flickr.com/photos/22555876@N00/142056834">"Network"</a> by <a href="https://www.flickr.com/photos/22555876@N00">Qaanaaq</a> is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/2.0/?ref=ccsearch&atype=rich">CC BY-NC-ND 2.0</a> </div>
+                    <p style="font-size: 0.9rem;font-style: italic;"><img style="display: block;" src="https://live.staticflickr.com/3405/3653397359_8c52d1e0b4_b.jpg" alt="Transportation Conference Speakers - 1">
+                    <div class="hovermsg"><a href="https://www.flickr.com/photos/29072716@N04/3653397359">"Transportation Conference Speakers - 1"</a><span> by <a href="https://www.flickr.com/photos/29072716@N04">Cushing Memorial Library and Archives, Texas A&M</a></span> is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/2.0/?ref=ccsearch&atype=html" style="margin-right: 5px;">CC BY-NC-ND 2.0</a><a href="https://creativecommons.org/licenses/by-nc-nd/2.0/?ref=ccsearch&atype=html" target="_blank" rel="noopener noreferrer" style="display: inline-block;white-space: break-spaces;margin-top: 2px;margin-left: 3px;height: 22px !important;"><img style="height: inherit;margin-right: 3px;display: inline-block;" src="https://search.creativecommons.org/static/img/cc_icon.svg?image_id=2bb0a5c7-1394-46c7-a3e7-e9b791a75b7a" /><img style="height: inherit;margin-right: 3px;display: inline-block;" src="https://search.creativecommons.org/static/img/cc-by_icon.svg" /><img style="height: inherit;margin-right: 3px;display: inline-block;" src="https://search.creativecommons.org/static/img/cc-nc_icon.svg" /><img style="height: inherit;margin-right: 3px;display: inline-block;" src="https://search.creativecommons.org/static/img/cc-nd_icon.svg" /></a></p> </div>
                 </div>
                 <div class="sectionText">
-                    <p>Lenard Kleinrock - MIT – Adapted Queuing theory to electronic messages and used Demand Access and Distributed Control in his design. He received the National Medal of Honor for his work.</p>
-                    <p>Donald Davies, was a Welsh computer scientist who was employed at the UK National Physical Laboratory who in 1965 he conceived of packet switching.</p>
-                    <p>Around the same time Paul Baran – a researcher at RAND, took on the task of designing a "survivable" communications system. He conceived of a robust communications network using “redundancy” and “digital” technology. Paul invented packet switching techniques that played a key role in the development of the internet.</p>
+                    <p>In October, 1972 ARPA sponsored the first International Conference on Computers and Communication in Washingtion, DC. The purpose of this conference was to showcase the capabilities of the ARPANET. A Terminal Interface Processor was installed at the hotel, connected with a special telephone connection from AT&T. Connected to the Terminal Interface Processor were dozens of terminals spread around the conference hall.</p>
+                    <p>The demontration allowed the paticipants to interact with romote computer systems which included an air traffic control system and playing computer chess.
+                        The ICCC was a huge success. Before the end of 1972 there were 37 computers on the network.</p>
                 </div>
             </section>
         </main>
         <aside>
-            <h3>JCR Licklider </h3>
+            <h3>History of ARPANET</h3>
             <div class="hoverwrap">
-                <img src="images/licklider_cc.JPG" alt="This is a picture of JCR Licklider "/>
-                <div class="hovermsg"><a href="https://www.flickr.com/photos/62234213@N00/5131454013">"JCR Licklider"</a> by <a href="JCR Licklider ">atduskgreg</a> is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/2.0/?ref=ccsearch&atype=rich">CC BY-NC-ND 2.0</a> </div>
-            </div>
-            <div>
-                Licklider was born on March 11, 1915, in St. Louis, Missouri. He studied at Washington University in St. Louis where he graduated with a triple major in physics, mathematics and psychology and went on to his doctorate. He became a research fellow at MIT in 1943 and in 1950 he became interested in information technology. He had ideas about graphical point and click interfaces, digital libraries, e-commerce and online banking. He learned about time-sharing at a conference in Paris, and developed his own version of time-sharing. In 1962 Licklider joined ARPA (Advanced Research Projects Agency) as head of the Information Processing Techniques Office. His work at ARPA included conceiving of and funding network research. While at IPTO, he convinced some of the most important players in the development of the internet, Ivan Sutherland, Bob Taylor, and Larry Roberts, that an all-encompassing computer network was very important.
-            </div>
+                <iframe width="300vw" height="200vw" src="https://www.youtube.com/embed/36H6z1Uq6gI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+             </div>
         </aside>
         <aside>
             <h3>Celebration of the Life of Robert W. Taylor Video</h3>
-            <img src="images/robert_taylor_video.JPG" alt="This is a picture of Robert Taylor"/>
-            <div>
-                <a href="https://www.youtube.com/watch?v=7LpU3JuSElY">Celebration of the Life of Robert W. Taylor</a> is an in depth look at the contribution that Bob Taylor had on the development of the ARPANET and later the internet.
-            </div>
-        </aside>
-        <aside>
-            <h3>Aside 3</h3>
-            <div class="hoverwrap">
-                <img src="images/licklider_cc.JPG" alt="This is a picture of JCR Licklider "/>
-                <div class="hovermsg"><a href="https://www.flickr.com/photos/62234213@N00/5131454013">"JCR Licklider"</a> by <a href="JCR Licklider ">atduskgreg</a> is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/2.0/?ref=ccsearch&atype=rich">CC BY-NC-ND 2.0</a> </div>
-            </div>
-            <div>
-                In the early 1980s, the National Science Foundation (NSF) funded national supercomputing centers at several universities in the United States, and provided interconnectivity in 1986 with the NSFNET project, thus creating network access to these supercomputer sites for research and academic organizations in the United States. International connections to NSFNET, the emergence of architecture such as the Domain Name System, and the adoption of TCP/IP internationally on existing networks marked the beginnings of the Internet.
-            </div>
+            <iframe width="300vw" height="200" src="https://www.youtube.com/embed/7LpU3JuSElY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </aside>
         <footer>
             <span id="Copyright">
