--- a/public_html/pre-internet.html
+++ b/public_html/pre-internet.html
@@ -71,19 +71,8 @@
         </aside>
         <aside>
             <h3>The History of Computing Video</h3>
-            <img src="images/history_of_computing_video.JPG" alt="This is a picture of computing origins"/>
             <div>
-                <a href="https://www.youtube.com/watch?v=-M6lANfzFsM">The History of Computing</a> is an interesting look at early computing.
-            </div>
-        </aside>
-        <aside>
-            <h3>Aside 3</h3>
-            <div class="hoverwrap">
-                <img src="images/licklider_cc.JPG" alt="This is a picture of JCR Licklider "/>
-                <div class="hovermsg"><a href="https://www.flickr.com/photos/62234213@N00/5131454013">"JCR Licklider"</a> by <a href="JCR Licklider ">atduskgreg</a> is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/2.0/?ref=ccsearch&atype=rich">CC BY-NC-ND 2.0</a> </div>
-            </div>
-            <div>
-                In the early 1980s, the National Science Foundation (NSF) funded national supercomputing centers at several universities in the United States, and provided interconnectivity in 1986 with the NSFNET project, thus creating network access to these supercomputer sites for research and academic organizations in the United States. International connections to NSFNET, the emergence of architecture such as the Domain Name System, and the adoption of TCP/IP internationally on existing networks marked the beginnings of the Internet.
+                <iframe width="300" height="200" src="https://www.youtube.com/embed/-M6lANfzFsM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </aside>
         <footer>
