Created early_internet.html and filled with content. Updated links. Got rid of picture copyright HTML, and used my cut and paste method.

--- a/public_html/arpa-net.html
+++ b/public_html/arpa-net.html
@@ -16,6 +16,7 @@
         <li><a href="about.html">About</a></li>
         <li><a href="pre-internet.html">Pre-Internet</a></li>
         <li><a href="arpa-net.html">ARPA-NET</a></li>
+        <li><a href="early_internet.html">Early Internet</a></li>
     </menu>
     <div id="heading">
         <h2>ARPA-NET: The Beginnings of The Internet</h2>
@@ -53,8 +54,8 @@
             <section id="section3">
                 <h2>The ICCC Showcases ARPANET</h2>
                 <div class="hoverwrap">
-                    <p style="font-size: 0.9rem;font-style: italic;"><img style="display: block;" src="https://live.staticflickr.com/3405/3653397359_8c52d1e0b4_b.jpg" alt="Transportation Conference Speakers - 1">
-                    <div class="hovermsg"><a href="https://www.flickr.com/photos/29072716@N04/3653397359">"Transportation Conference Speakers - 1"</a><span> by <a href="https://www.flickr.com/photos/29072716@N04">Cushing Memorial Library and Archives, Texas A&M</a></span> is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/2.0/?ref=ccsearch&atype=html" style="margin-right: 5px;">CC BY-NC-ND 2.0</a><a href="https://creativecommons.org/licenses/by-nc-nd/2.0/?ref=ccsearch&atype=html" target="_blank" rel="noopener noreferrer" style="display: inline-block;white-space: break-spaces;margin-top: 2px;margin-left: 3px;height: 22px !important;"><img style="height: inherit;margin-right: 3px;display: inline-block;" src="https://search.creativecommons.org/static/img/cc_icon.svg?image_id=2bb0a5c7-1394-46c7-a3e7-e9b791a75b7a" /><img style="height: inherit;margin-right: 3px;display: inline-block;" src="https://search.creativecommons.org/static/img/cc-by_icon.svg" /><img style="height: inherit;margin-right: 3px;display: inline-block;" src="https://search.creativecommons.org/static/img/cc-nc_icon.svg" /><img style="height: inherit;margin-right: 3px;display: inline-block;" src="https://search.creativecommons.org/static/img/cc-nd_icon.svg" /></a></p> </div>
+                    <img src="images/conference_cc.JPG" alt="This is a picture of a conference"/>
+                    <div class="hovermsg"><a href="https://www.flickr.com/photos/29072716@N04/3653397359">"Transportation Conference Speakers - 1"</a> by <a href="https://www.flickr.com/photos/29072716@N04">Cushing Memorial Library and Archives, Texas A&M</a> is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/2.0/?ref=ccsearch&atype=rich">CC BY-NC-ND 2.0</a> </div>
                 </div>
                 <div class="sectionText">
                     <p>In October, 1972 ARPA sponsored the first International Conference on Computers and Communication in Washingtion, DC. The purpose of this conference was to showcase the capabilities of the ARPANET. A Terminal Interface Processor was installed at the hotel, connected with a special telephone connection from AT&T. Connected to the Terminal Interface Processor were dozens of terminals spread around the conference hall.</p>
@@ -66,12 +67,12 @@
         <aside>
             <h3>History of ARPANET</h3>
             <div class="hoverwrap">
-                <iframe width="300vw" height="200vw" src="https://www.youtube.com/embed/36H6z1Uq6gI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="300vw" height="200vw" src="https://www.youtube.com/embed/36H6z1Uq6gI" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
              </div>
         </aside>
         <aside>
             <h3>Celebration of the Life of Robert W. Taylor Video</h3>
-            <iframe width="300vw" height="200" src="https://www.youtube.com/embed/7LpU3JuSElY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="300vw" height="200" src="https://www.youtube.com/embed/7LpU3JuSElY" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </aside>
         <footer>
             <span id="Copyright">
