--- a/public_html/index.html
+++ b/public_html/index.html
@@ -9,8 +9,12 @@
     <!-- <link rel="stylesheet" href="css/style.css"> -->
 
     <style>
+
+        body {
+            margin-top: 0;
+        }
         header {
-            width: 67%;
+            width: 50%;
             float: left;
             text-align: center;
             font-size: 1.5vw;
@@ -22,11 +26,11 @@
         }
 
         menu {
-            float: right;
+            /* float: left; */
             margin-top: 0;
-            width: 33%;
+            width: 50%;
             font-size: 1.3vw;
-            margin-left: 66%;
+            margin-left: 50%;
             /* fixed locks the position relative to the window, so scrolling has no effect.
             For some reason this moves the horizontal position all the way to the left??? */
             position: fixed;
@@ -180,6 +184,7 @@
         <li><a href="about.html">About</a></li>
         <li><a href="pre-internet.html">Pre-Internet</a></li>
         <li><a href="arpa-net.html">ARPA-NET</a></li>
+        <li><a href="early_internet.html">Early Internet</a></li>
     </menu>
     <div id ="heading">
         <h2>Explore The Interesting and Exciting History Of The Internet</h2>
