--- a/public_html/pre-internet.html
+++ b/public_html/pre-internet.html
@@ -16,6 +16,7 @@
         <li><a href="about.html">About</a></li>
         <li><a href="pre-internet.html">Pre-Internet</a></li>
         <li><a href="arpa-net.html">ARPA-NET</a></li>
+        <li><a href="early_internet.html">Early Internet</a></li>
     </menu>
     <div id="heading">
         <h2>Pre-Internet: The Pioneers of Computing That Enabled The Internet</h2>
@@ -63,7 +64,7 @@
             <h3>JCR Licklider </h3>
             <div class="hoverwrap">
                 <img src="images/licklider_cc.JPG" alt="This is a picture of JCR Licklider "/>
-                <div class="hovermsg"><a href="https://www.flickr.com/photos/62234213@N00/5131454013">"JCR Licklider"</a> by <a href="JCR Licklider ">atduskgreg</a> is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/2.0/?ref=ccsearch&atype=rich">CC BY-NC-ND 2.0</a> </div>
+                <div class="hovermsg"><a href="https://www.flickr.com/photos/62234213@N00/5131454013">"JCR Licklider"</a> by <a href="https://www.flickr.com/photos/62234213@N00">atduskgreg</a> is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/2.0/?ref=ccsearch&atype=rich">CC BY-NC-ND 2.0</a> </div>
             </div>
             <div>
                 Licklider was born on March 11, 1915, in St. Louis, Missouri. He studied at Washington University in St. Louis where he graduated with a triple major in physics, mathematics and psychology and went on to his doctorate. He became a research fellow at MIT in 1943 and in 1950 he became interested in information technology. He had ideas about graphical point and click interfaces, digital libraries, e-commerce and online banking. He learned about time-sharing at a conference in Paris, and developed his own version of time-sharing. In 1962 Licklider joined ARPA (Advanced Research Projects Agency) as head of the Information Processing Techniques Office. His work at ARPA included conceiving of and funding network research. While at IPTO, he convinced some of the most important players in the development of the internet, Ivan Sutherland, Bob Taylor, and Larry Roberts, that an all-encompassing computer network was very important.
@@ -72,7 +73,7 @@
         <aside>
             <h3>The History of Computing Video</h3>
             <div>
-                <iframe width="300" height="200" src="https://www.youtube.com/embed/-M6lANfzFsM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="300" height="200" src="https://www.youtube.com/embed/-M6lANfzFsM" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </aside>
         <footer>
