Made videos responsive to sizing. Added browser_search.html and peoplenet.html Added content to browser_search.html

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -181,10 +181,12 @@
     </header>
     <menu>
         <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
         <li><a href="pre-internet.html">Pre-Internet</a></li>
         <li><a href="arpa-net.html">ARPA-NET</a></li>
         <li><a href="early_internet.html">Early Internet</a></li>
+        <li><a href="browser_search.html">Browser & Search</a></li>
+        <li><a href="peoplenet.html">People-Net</a></li>
+
     </menu>
     <div id ="heading">
         <h2>Explore The Interesting and Exciting History Of The Internet</h2>
@@ -206,14 +208,14 @@
             <h3>Arpa-net</h3>
             <img src="images/arpanet1972.JPG" alt="This is a arpanet"/>
             <div>
-                <a href="pre-internet.html">The exciting beginning of the Internet!</a>
+                <a href="arpa-net.html">The exciting beginning of the Internet!</a>
             </div>
         </aside>
         <aside>
             <h3>Early Internet</h3>
             <img src="images/dialupModem.JPG" alt="This is a early internet"/>
             <div>
-                <a href="pre-internet.html">Wow! Dial-up Modems!</a>
+                <a href="early_internet.html">Wow! Dial-up Modems!</a>
             </div>
         </aside>
         <aside>
