--- a/public_html/peoplenet.html
+++ b/public_html/peoplenet.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Early Internet</title>
-    <meta name="description" content="Early Internet">
+    <title>People-Net</title>
+    <meta name="description" content="Social Sites">
     <!-- COMMENT IN HTML -->
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -20,7 +20,7 @@
         <li><a href="peoplenet.html">People-Net</a></li>
     </menu>
     <div id="heading">
-        <h2>Early Internet: The Transition From Military to the People</h2>
+        <h2>People-Net: How users dictated the content</h2>
     </div>
     <div id="wrapper">
         <main>
