--- a/public_html/pre-internet.html
+++ b/public_html/pre-internet.html
@@ -13,10 +13,11 @@
     </header>
     <menu>
         <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
         <li><a href="pre-internet.html">Pre-Internet</a></li>
         <li><a href="arpa-net.html">ARPA-NET</a></li>
         <li><a href="early_internet.html">Early Internet</a></li>
+        <li><a href="browser_search.html">Browser & Search</a></li>
+        <li><a href="peoplenet.html">People-Net</a></li>
     </menu>
     <div id="heading">
         <h2>Pre-Internet: The Pioneers of Computing That Enabled The Internet</h2>
@@ -73,7 +74,7 @@
         <aside>
             <h3>The History of Computing Video</h3>
             <div>
-                <iframe width="300" height="200" src="https://www.youtube.com/embed/-M6lANfzFsM" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="500vw" height="150vw" src="https://www.youtube.com/embed/-M6lANfzFsM" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </aside>
         <footer>
