--- a/public_html/arpa-net.html
+++ b/public_html/arpa-net.html
@@ -13,10 +13,11 @@
     </header>
     <menu>
         <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
         <li><a href="pre-internet.html">Pre-Internet</a></li>
         <li><a href="arpa-net.html">ARPA-NET</a></li>
         <li><a href="early_internet.html">Early Internet</a></li>
+        <li><a href="browser_search.html">Browser & Search</a></li>
+        <li><a href="peoplenet.html">People-Net</a></li>
     </menu>
     <div id="heading">
         <h2>ARPA-NET: The Beginnings of The Internet</h2>
