--- a/public_html/peoplenet.html
+++ b/public_html/peoplenet.html
@@ -25,62 +25,82 @@
     <div id="wrapper">
         <main>
             <section id="section1">
-                <h2>Internet Enablers</h2>
+                <h2>Social Media</h2>
                 <div class="hoverwrap">
-                    <img src="images/tcpip1_cc.JPG" alt="This is a picture of TCP/IP"/>
-                    <div class="hovermsg"><a href="https://www.flickr.com/photos/93453114@N00/5598305463">"TCP/IP Stack"</a> by <a href="https://www.flickr.com/photos/93453114@N00">purpleslog</a> is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/2.0/?ref=ccsearch&atype=rich">CC BY-NC-ND 2.0</a> </div>
+                    <img src="images/facebook_cc.JPG" alt="This is a picture of facebook"/>
+                    <div class="hovermsg"><a href="https://www.flickr.com/photos/50623029@N07/5169004822">"Facebook Screenshot"</a> by <a href="https://www.flickr.com/photos/50623029@N07">codemastersnake</a> is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/2.0/?ref=ccsearch&atype=rich">CC BY-NC-ND 2.0</a> </div>
                 </div>
                 <div class="sectionText">
-                    <p>Small networks had been developed at large businesses and universities, but there was no way to tie them into ARPANET. In 1973 Vint Cerf and Bob Kahnn invented the TCP/IP protocol, which enabled disparate networks to communicate. TCP/IP packets contain the Origination address and the Destination address. The key to this system is the Gateway, which is the computer that connects the smaller networks to the internet.
-                        In 1983 TCP/IP was adopted as the international standard.</p>
-
-                    <p>Vint Cerf said that, “The internet is a network of networks”. “The internet is really a design philosophy and architecture expressed in a set of protocols.”
-                    A Protocol is a well known set of rules and standards used to communicate between machines.
-                    The Internet Protocol, or IP, is a protocol for assigning addresses to computers, basically creating a map of the internet.
-                    IPV4 is a 32 bit addressing scheme designed in 1973, adopted in 1980s and is still in use today. Due to the growth of the internet, 32 bits is not enough for a unique address for every computer. Because of this IPV4 is being faded out and IPV6, a 128 bit protocol is taking its place.
-                    Due to the fact that using numbers for a computer's address makes it very difficult to remember a website address, they came up with the Domain Name System (DNS) which associates domain names such as google and amazon with the IP address.
-                    A website address such as "Https:/pets.com/dogs" is broken down into the following : Protocol:/domain name.Top-Level Domain (TLD)/path
-                        Routers monitor paths to the (or towards) the destination IP address and chooses the best path (Time – Politics - Relationships).</p>
+                    <p>
+                        One thing that really captured peoples interest is when they got to participate in the content. Power to the people.
+                        Reddit (2005) and more recently Digg (2012) have all content provided by users. Upvotes determine the post's prominence on the site. Users can choose the channels they like and up or downvote
+                        Jay Adelson, CEO Digg asks, “Who do you trust more? Do you trust some corporate executive, or do you trust your peers and the people who are connected to you?” Most would trust their peers.
+                    </p>
+                    <p>
+                        Youtube 2005 is a 100% user supplied Video content. Youtube is amazing. It has information about everything you can imagine and all kinds of entertainment.
+                        Chad Hurley – CEO and co-founder says, “The internet's about connecting individuals or connecting individuals to information.” “Everyone should have the opportunity to be heard.”
+                    </p>
+                    <p>
+                        Social Networking is about connecting with "friends" and posting personal information to friends and following others personal posts. There is some posting of media and commenting on it, but it's mostly about feeling connected with others.
+                        Myspace 2003 was the original social media website and was hugely popular. Facebook followed in 2004 with a similar site and was very popular in colleges. Myspace was overtaken by Facebook in 2009
+                        Facebook 2004 – Mark Zuckerberg “The reason you spend so much time communicating with your friends and other people that you respect is because there opinions and what they say means a lot to you.”
+                    </p>
+                    <p>
+                        Blogging is news, opinions and information from one person directly to the audience, and many times there is a two way dialog. Anyone can start a blog on any subject. Some only get a few views, while others become huge successes.
+                    </p>
                 </div>
             </section>
             <section id="section2">
-                <h2>Finally the Internet!</h2>
+                <h2>Online Music</h2>
                 <div class="hoverwrap">
-                    <img src="images/internetaccess_cc.JPG" alt="This is a picture of Internet Access sign"/>
-                    <div class="hovermsg"><a href="https://www.flickr.com/photos/13118492@N04/3183290111">"Internet Access Here Sign"</a> by <a href="https://www.flickr.com/photos/13118492@N04">Steve Rhode</a> is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/2.0/?ref=ccsearch&atype=rich">CC BY-NC-ND 2.0</a> </div>
+                    <img src="images/napster_cc.JPG" alt="This is a picture of Napster screenshot"/>
+                    <div class="hovermsg"><a href="https://www.flickr.com/photos/26487906@N00/28492839">"Kaysha on Napster"</a> by <a href="https://www.flickr.com/photos/26487906@N00">kaysha</a> is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/2.0/?ref=ccsearch&atype=rich">CC BY-NC-ND 2.0</a> </div>
                 </div>
                 <div class="sectionText">
-                    <p>ARPANET was opened to other R&D sites including universities, research contractors, and government labs.
-                    In 1983, the rapidly expanding network broke off from its military part, which became MILNET.
-                    NSFNET, operated by the National Science Foundation, replaced ARPANET in 1985
-                        ARPANET was finally shut down in February 1990.</p>
-
-                    <p>In 1992 congress passed a bill taking the internet out of the hands of government and making it public.
-                    NSFNET continued to operate until 1995, during which time it grew into an important backbone for the emerging Internet.
-                    At the same time they formed The Internet Corporation for Assigned Names and Numbers (ICAAN), which is a non-profit that controls DNS system which registers Domain Names to IP addresses.
-                        At that time there were only 50 web pages on the internet. However, Vint Cerf predicted that the internet will be the “telecommunications infrastructure for the 21st century, and will absorb and support all of the other media telephony, television, radio and computer communications.”</p>
+                    The invention of MP3 compression in 1991 made online music practical. With smaller file sizes downloading music was quick.
+                    Justin Frankel was the co-creator winamp which was released in 1997. It became a very popular music player whose popularity rose with the rise in mp3 proliferation.
+                    <p>
+                        Shawn Fanning created a music sharing network website called Napster. Napster allowed users to share music files in blatant disregard of the music copyright laws. Musicians and Record labels were losing millions of dollars to illegal music distribution, but it was very hard to do anything to stop it. The internet was a relatively new technology and the laws hadn't yet caught up.
+                        In 2000 one of the bands, Metalica, met with Napster to try to get them to stop trading Metalica songs, but it didn't phase Fanning, and Metalica ended up getting bad publicity over it.
+                    </p>
+                    <p>
+                        In 2001 Hilary Rosen and the RIIA filed a lawsuit against Napster which had profound implications for the role of copyrite in the digital age. The verdict said Napster must be shut down immediately.
+                        This was great timing for Apple which introduced iTunes in 2001 with songs for $0.99. Itunes became a huge success for both Mac and Windows users.
+                    </p>
                 </div>
             </section>
+        <section id="section3">
+            <h2>Online Security</h2>
+            <div class="hoverwrap">
+                <img src="images/https_cc.JPG" alt="This is a picture of Napster screenshot"/>
+                <div class="hovermsg"><a href="https://www.flickr.com/photos/18090920@N07/15944989872">"https"</a> by <a href="https://www.flickr.com/photos/18090920@N07">Sean MacEntee</a> is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/2.0/?ref=ccsearch&atype=rich">CC BY-NC-ND 2.0</a> </div>
+            </div>
+            <div class="sectionText">
+                With all the financial information and intellectual property and critical control systems information that is flying around the internet, security became a huge concern.
+                In 1975 Whitfield Diffie introduced the public key concept to encryption. In 1991 Phil Zimmerman created a public key encryption for the computer. This meant that finally it was easy to send messages and files over the internet securely.
+                <p>
+                    In 1995 a major breakthrough in internet security was the Secure Communication (HTTPS). HTTPS uses Secure Sockets Layer (SSL) to encrypt the data. SSL was first developed by Netscape in 1995 for the purpose of ensuring privacy, authentication, and data integrity in Internet communications.
+                    A new and better encryption application, Transport Layer Security (TLS), replaced SSL in 1999. Now whenever you go to a sight that uses HTTPS your browser shows a lock icon in front of the URL. When you see this lock you know that your data is secure.
+                </p>
+            </div>
+        </section>
         </main>
         <aside>
-            <h3>Vint Cerf</h3>
+            <h3>Napster vs Metallica - Tales From the Internet</h3>
             <div class="hoverwrap">
-                <img src="images/vint_cerf_cc.JPG" alt="This is a picture of Vint Cerf"/>
-                <div class="hovermsg"><a href="https://www.flickr.com/photos/87232391@N00/398653550">"Vint Cerf"</a> by <a href="https://www.flickr.com/photos/87232391@N00">Charles Haynes</a> is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/2.0/?ref=ccsearch&atype=rich">CC BY-NC-ND 2.0</a> </div>
+                <iframe width="729" height="410" src="https://www.youtube.com/embed/Rlxaoy6NrFk" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div>
-                Vint Cerf is and American internet pioneer, who developed the crucial internet protocol TCP/IP alongside Bob Kahn. Cerf wrote the first TCP protocol in 1974 while at UCLA. And then at Stanford he conducted research on packet switching and designed the DoD TCP/IP protocol with Kahn.
-                Cerf was highly regarded for his contribution to the internet and received honorary degrees and awards including the National Medal of Tecnology, the Turing award, the presidential Medal of freedom and the Marconi Prize.
+                Musicians just wanted to get paid for their work. I don't think that's too much to ask. But when Metalica asked, Napster said NO.
             </div>
         </aside>
         <aside>
-            <h3>Bob Kahn</h3>
+            <h3>A Brief History of Cybersecurity and Hacking</h3>
             <div class="hoverwrap">
-                <img src="images/bob_kahn_cc.JPG" alt="This is a picture of Bob Kahn"/>
-                <div class="hovermsg"><a href="https://commons.wikimedia.org/w/index.php?curid=26207416">"File:Bob Kahn.jpg"</a> by <a href="https://commons.wikimedia.org/wiki/User:%D0%92%D0%B5%D0%BD%D0%B8_%D0%9C%D0%B0%D1%80%D0%BA%D0%BE%D0%B2%D1%81%D0%BA%D0%B8">Вени Марковски | Veni Markovski</a> is licensed under <a href="https://creativecommons.org/licenses/by-sa/3.0?ref=ccsearch&atype=rich">CC BY-SA 3.0</a> </div>
+                <iframe width="729" height="410" src="https://www.youtube.com/embed/V6p7lFsokXo" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div>
-                Bob Kahn co-created TCP/IP which is the protocol that the internet is built on. While Kahn was working on the SATNET satellite network project, he got the idea for the Transmission Control Protocol (TCP) which would later replace the NCP that was used in the ARPANET. TCP was the basis of open-architecture networking, which would be the common language that allowed computers and networks with different hardware and software to communicate across the world.
+                Believe it or not, computer hacking goes back to the ARPANET! Check out this interesting history of internet security.....or lack thereof.
             </div>
         </aside>
         <footer>
