Added jscript for W3C Validation Button and link. Investigated hover with popup. Did not implement. Changed pictures and links on index.html asides. Am encountering Docker desktop System Runtime Exceptions. Not sure if this will affect build and depoy.

--- a/public_html/browser_search.html
+++ b/public_html/browser_search.html
@@ -32,20 +32,19 @@
                 </div>
                 <div class="sectionText">
                     <p>
-                    The internet was open, but the problem was that it was too difficult to find anything.
-                    Tim Bernards Lee from Cern invented HTTP and HTML which facilitated the use of web pages and web servers and the world wide web was born., where you could follow links to get around the internet???
+                    The internet was open to the world, but the problem was that it was too difficult to get around and even more difficult to find relevant web pages.
+                    In 1991 Tim Bernards Lee from Cern invented HTTP and HTML which facilitated the use of web pages and web servers and the world wide web was born. Now you could follow links to get around the internet.
                     </p>
                     <p>
-                    Mark Andresent – in 1993 at the University of Illinois he developed the Mosaic browser, later renamed the Netscape browser. Mosaic was the first easy to use browser that made the internet useful.
+                    Mark Andresent in 1993 at the University of Illinois he developed the Mosaic browser, later renamed the Netscape browser. Mosaic was the first easy to use browser that made the internet more navigable and useful.
                     Netscape browsers went viral on the internet. After Netscape was released the internet grew by 341,000%
                     </p>
                     <p>
-                    In 1994 Bill Gates realized that it was a blunder to have ignored the internet and called for a All Hands On Deck to crush Nescape.
+                    In 1994 Bill Gates realized that it was a blunder to have ignored the internet and called for a All Hands On Deck to crush Netscape.
                     </p>
                     <p>
                     Thomas Rearden of  Microsoft called Netscape to see if they would make a deal, but “was told to pound sand”.
                     Microsoft eventually was able to arrange a closed-door face to face meeting with Nescape. Neither side agrees on what was said at that meeting, but no deal was reached.
-
                     Mark Andresent was arrogant and mocked Microsoft, which angered Gates and the Internet Explorer team and made them determined to crush Netscape.
                     </p>
                     <p>
