--- a/public_html/testcss.html
+++ b/public_html/testcss.html
@@ -1,50 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <style>
-        /* (A) WRAPPER
-        .hoverwrap {
-            position: relative;
-            max-width: 500px;  OPTIONAL
-        }*/
+<html xmlns="http://www.w3.org/1999/html">
 
-        /* (B) RESPONSIVE IMAGE
-        .hoverwrap img { width: 100%; }*/
+<style>
+    .avatar::before,
+    .avatar::after {
+        position: absolute;
+        top: -.25rem;
+        left: 50%;
+        transform: translateX(-100%) translateY(50%);
+    }
+    .avatar::after {
+        content: attr(data-tooltip);
+        height: 300px;
+        width: 400px;
+        background: pink;
 
-        /* (C) CAPTION*/
-        .hovercap {
-            /* (C1) DIMENSIONS
-            box-sizing: border-box;
-            width: 100%;
-            padding: 10px;
-            /* (C2) BOTTOM
-            position: absolute;
-            bottom: 0;*/
-            /* (C3) COLORS
-            background-color: rgba(0, 0, 0, 0.5);
-            color: white;*/
-        }
+    }
 
-        /* (D) SHOW/HIDE */
-        .hovercap {
-            visibility: hidden;
-            opacity: 0;
-            transition: opacity 0.3s;
-        }
-        .hoverwrap:hover .hovercap {
-            visibility: visible;
-            opacity: 1;
-        }
+    img {
+        margin: 100px;
+        height: 200px;
+        width: 300px;
+        position: relative;
+    }
 
-    </style>
-</head>
+</style>
+
+
 <body>
-<div class="hoverwrap">
-    <img src="images/dialupModem.JPG" alt="test image"/>
-    <div class="hovercap">A Sleeping Cat</div>
-    more text
-</div>
+
+
+    <div class="avatar" data-tooltip="Some Text">
+        <img src="images/mainframe.JPG" alt="This is a splash"/>
+    </div>
+
 </body>
 </html>
